--- a/example.service
+++ b/example.service
@@ -1,8 +1,8 @@
 #!/bin/bash
 
 # define constants
-CURR_FILE="${BASH_SOURCE[0]}"
-CURR_DIR="$( cd "$( dirname "$CURR_FILE" )" && pwd )"
+CURR_FILE=$(readlink -f "$0")
+CURR_DIR=$(dirname $CURR_FILE)
 PROJECT_NAME="$(basename $CURR_DIR)_$(basename $CURR_FILE)"
 SESSION_NAME="${PROJECT_NAME%%.*}"
 
