--- a/example.service
+++ b/example.service
@@ -3,7 +3,7 @@
 # define constants
 CURR_FILE=$(readlink -f "$0")
 CURR_DIR=$(dirname $CURR_FILE)
-PROJECT_NAME="$(basename $CURR_DIR)_$(basename $CURR_FILE)"
+PROJECT_NAME="$(basename ${CURR_DIR/.})_$(basename $CURR_FILE)"
 SESSION_NAME="${PROJECT_NAME%%.*}"
 
 # include lib(s)
