--- a/example.service
+++ b/example.service
@@ -1,5 +1,6 @@
 #!/bin/bash
-DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
+DIR="$(dirname "$(readlink -f "$0")")"
+
 . /etc/aktos/service-runner/tmux-launch
 launch-service $(calc-session-name "$0")
 
